--- a/templates/include/banner_detail.html
+++ b/templates/include/banner_detail.html
@@ -2,7 +2,7 @@
     ============================================= -->
 <div
   class="breadcrumb-area shadow dark bg-fixed text-center text-light"
-  style="background-image: url(assets/img/2440x1578.png)"
+  style="background-image: url('static/assets/img/2440x1578.jpg')"
 >
   <div class="container">
     <div class="row">
