--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: -150px">
   <div class="f-items default-padding">
     <div class="row">
       <!-- Single item -->
@@ -97,7 +97,7 @@
   </div>
 </div>
 <!-- Start Footer Bottom -->
-<div class="footer-bottom">
+<div class="footer-bottom" style="margin-top: -100px">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
