--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,7 +1,5 @@
 <div
-  class="container"
-  style="margin-top: -150px; background-color: orange; color: white"
->
+  class="container">
   <div class="f-items default-padding">
     <div class="row">
       <!-- Single item -->
