--- a/templates/detail.html
+++ b/templates/detail.html
@@ -85,4 +85,4 @@
 <!-- Start Footer 
   ============================================= -->
 <!-- End Footer -->
-{% endblock %}
+{% include 'include/newsletter.html' %} {% endblock %}
