--- a/templates/home.html
+++ b/templates/home.html
@@ -753,43 +753,7 @@
 
 <!-- Start Newsletter 
   ============================================= -->
-<div class="newsletter-area">
-  <div class="container">
-    <div
-      class="subscribe-items shadow theme-hard default-padding bg-cover"
-      style="background-image: url('/static/assets/img/2440x1578.jpg')"
-    >
-      <div class="row">
-        <div class="col-md-7 left-info">
-          <div class="info-box">
-            <div class="icon">
-              <i class="flaticon-email"></i>
-            </div>
-            <div class="info">
-              <h3>Subscribe to our newsletter</h3>
-              <p>{% for a in agendas %} {{ a.title }} {% endfor %}</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5">
-          <form action="#">
-            <div class="input-group">
-              <input
-                type="email"
-                placeholder="Enter your e-mail here"
-                class="form-control"
-                name="email"
-              />
-              <button type="submit">
-                Subscribe <i class="fa fa-paper-plane"></i>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{% include 'include/newsletter.html' %}
 <!-- End Newsletter -->
 
 {% endblock %}
